src/program/snapshots/quil__program__graph__tests__graph__single_instruction.snap
---
source: quil/src/program/graph.rs
expression: "ProgramDebugWrapper{program: &scheduled_program,}"

---
digraph {
	entry [label="Entry Point"]
	entry -> "start_start"
	subgraph "cluster_start" {
		label="start"
		node [ style="filled" ]
		"start_start" [ label=start, shape=circle ]
		"start_start" -> "start_0" [ label="immediate" ]
		"start_start" -> "start_end" [ label="immediate" ]
		"start_0" [label="PULSE 0 \"rx\" test(duration: 1.00e6)"]
		"start_0" -> "start_end" [ label="immediate" ]
		"start_end" [ label=end, shape=circle ]
	}
}

